2007-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarpview.cpp: stub for a device-based version of the
	yarp viewer.

	* src/libYARP_OS/include/yarp/Protocol.h: give a helpful
	message if someone tries to connect to a YARP port and
	sends gibberish.

	* src/libYARP_OS/src/PortCore.cpp (adminBlock): made port admin
	interface more complete.

2007-11-24  Giacomo Spigler <spiglerg@gmail.com>

	* src/modules/cuda/*:
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h:	
	* example/cuda: Added a new GPU device driver, using CUDA, the
	latest NVIDIA library for gpgpu. NOTE: it currently has a few
	limitations, and it can only run on the very latest NVIDIA
	GPUs. It can transform (NVIDIA GeForce 8800GTS) to bw a 320x240 
	image taking just 0.36ms!

2007-11-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: added stub for
	generic administrative interface to ports.  Eventually, this
	should deal with reporting statistics about port operation
	and performance.

2007-11-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/NetInt32.h, conf/YarpReqLib.cmake: 
	finally made CMake responsible for figuring out appropriate integer 
	type. Older guesses now only used when not compiling with CMake.

2007-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: implement RGB
	format with 32-bit channels.

	* src/libYARP_OS/src/PortCore.cpp: Now have callbacks for
	connections/disconnections - use Port::setReporter and
	BufferedPort:setReporter methods.

	* conf/YarpVersion.cmake: froze version 2.1.8

	* src/libYARP_OS/src/PortCore.cpp: Returned structured
	report on port status, rather than just human-readable
	message.  See Port::getReport and BufferedPort::getReport
	methods.

2007-11-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/PortReport.h: Started
	work on a better method for getting notifications of port