@@ -1,5 +1,8 @@
 2007-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/modules/wxsdl/WxsdlWriter.h: stub for alternate wxwidgets+sdl 
+	image viewer.
+
 	* src/yarpdev/yarpview.cpp: stub for a device-based version of the
 	yarp viewer.
 
